--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-Email.user.email=Invalid email address
+Email.user.username=Invalid email address
 Size.user.firstName=First name must be greater than 1 character
 Size.user.lastName=Last name must be greater than 1 character
 Size.user.password=Password must be greater than 9 characters
